# footprints

./: .gitignore  CMakeLists.txt  readme.md  开发约定.md
src/: main.cpp
src/assets/html/: 3D_cube.html  diary_view.html  index.html  write.html
src/assets/three/: OrbitControls.js
src/comm/: log.cpp  log.h
src/handler/: assets_handler.h  cube_handler.h  diaries_handler.h  home_handler.h
src/html/: common.css  index.html  write.html
src/http/: http_request_parser.cpp  http_request_parser.h  http_response_builder.cpp  http_response_builder.h
src/router/: router.cpp  router.h
src/socket/: socket_server.cpp  socket_server.h
